--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Vinh's Homepage"
+title                    : "Vinh Q. Tran"
 title_separator          : "-"
 name                     : &name "Vinh Q. Tran"
 description              : &description "Vinh's Homepage"
