--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
 
 # SEO Related
-google_site_verification :
+google_site_verification : "-iWuE2SFfNdf4P8mbYSnIvcJ0rWLgecszqs-VjPSBCg"
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
