--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Vinh Q. Tran"
   avatar           : "profile.jpeg"
-  bio              : "ML/NLP Researcher, Senior Software Engineer at Google"
+  bio              : "Staff Research Engineer @ Google Research"
   location         : "Brooklyn, NY"
   employer         :
   pubmed           : 
