--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Vinh Q. Tran"
-  avatar           : "profile.jpeg"
+  avatar           : "vinh-portugal.jpeg"
   bio              : "Staff Research Scientist @ Google DeepMind"
   location         : "Brooklyn, NY"
   employer         :
