--- a/_config.yml
+++ b/_config.yml
@@ -96,13 +96,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "vqtran"
+  github           : 
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/vinh-tran-32597468/"
+  linkedin         : "vinh-tran-32597468/"
   orcid            :
   pinterest        :
   soundcloud       :
