--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : "vinh-tran-32597468/"
+  linkedin         : "vqctran"
   orcid            :
   pinterest        :
   soundcloud       :
